# Harmonica

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  harmonica_algorithm_spec.md  pyproject.toml  start-harmonica.bat  start-harmonica.sh
.github/workflows/: pages.yml
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
docs/agents/: algorithm-and-song-fields.md  api-and-custom-ui.md  classification-import-and-verify.md  song-classification-prompt.md
docs/planning/: algorithm-roadmap.md  classification-architecture.md  claude-handoff.md  copy-app-hidden.md  copy-app.md  copy-website.md  covers-feature.md  handoff.md  multi-device-architecture.md  multi-user-tenancy.md  preset-redesign-proposal.md  product-direction.md  (+4 more)
install/: install-harmonica-nas.sh  install-harmonica.bat  install-harmonica.sh
scripts/: import_storage_library.py  reclassify_from_payload.py  seed_demo_library.py  verify_classification.py
site/: 404.html  CNAME  README.md  _redirects  algorithm.html  index.html  llms.txt  robots.txt
tests/: conftest.py  test_algorithm.py  test_api.py  test_bt.py  test_cover_ranking.py  test_covers.py  test_embeds.py  test_export_import.py  test_favourite_pacing.py  test_history.py  test_multitenant.py  test_normalization.py  test_rating_history.py  test_ratings.py  test_satiation_rediscovery.py  test_security.py  test_serialization_covers.py  test_settings_coupling.py  test_spotify.py  test_tags.py  test_youtube_import.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+75 files in other folders)
